# pyinterboleto

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  release.config.js  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: inter.yaml  publish_pipy.yml  test_and_release.yaml
src/pyinterboleto/: __init__.py  auth.py  baixa.py  boleto.py  exceptions.py
src/pyinterboleto/baixa/: __init__.py
src/pyinterboleto/common/: desconto.py  mora.py  multa.py  tipo_pessoa.py
src/pyinterboleto/consulta/: detalhado.py  lista.py  pdf.py
src/pyinterboleto/emissao/: beneficiario.py  boleto.py  desconto.py  emissor.py  mensagem.py  mora.py  multa.py  pagador.py
src/pyinterboleto/utils/: floats.py  requests.py  sanitize.py  url.py
tests/: auth.py  conftest.py
tests/query/: detail.py  list.py
tests/write/: cancel.py  create.py
